test/types/records/const-checking/todo-linenumber-in-array-assignment-error.good
todo-linenumber-in-array-assignment-error.chpl:15: error: cannot assign to a record of the type RECTYPE using the default assignment operator because it has 'const' field(s)
